--- a/Fragment_Manager/Droid/Resources/layout/activity_main.axml
+++ b/Fragment_Manager/Droid/Resources/layout/activity_main.axml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -71,12 +75,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Speed anim"/>
-            
+
                 <android.support.v7.widget.AppCompatSpinner
                     android:id="@+id/speedSpinner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
-                
+
             </LinearLayout>
 
             <RadioGroup
@@ -119,7 +123,7 @@
             <LinearLayout
                 android:id="@+id/container"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:minHeight="300dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -127,10 +131,11 @@
                 android:layout_marginStart="64dp"
                 android:layout_marginEnd="64dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="32dp"/>
+                android:layout_marginBottom="32dp"
+                android:layout_height="match_parent"/>
 
         </android.support.constraint.ConstraintLayout>
 
     </LinearLayout>
 
-</RelativeLayout>
+</ScrollView>
